--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,17 @@
 ### your site title here
 
 title: ᲜᲣᲪᲘᲙᲝ ᲓᲔᲙᲐᲜᲝᲖᲘᲨᲕᲘᲚᲘ
-description: პოეზია, შემოქმედება, პუბლიკაციები, ბლოგი
+description: >
+  პოეტი. წარმოგიდგენთ საკუთარ შემოქმედებას - ლექსები, პროზა, პუბლიკაციები, ნახატები
+  
 
 baseurl:  #name of GitHub repository
 url: "" #custom url to be used instead of GitHub repository
-email: 
-
+email: "poet@nuciko.ge"
 # Pagination
-paginate: 4
-permalink: /blog/:year/:title/
-paginate_path: /blog/page:num/
+// paginate: 4
+// permalink: /blog/:year/:title/
+// paginate_path: /blog/page:num/
 
 # Social media links in footer
 # twitter: "#"
@@ -21,20 +22,16 @@ github: "nucik"
 # orcid: "#"
 # quora: "#"
 # instagram: "#"
-facebook: "/aphangani"
+facebook: "/nuciko.dekanozishvili"
 
  
 navigation:
   - title: ᲛᲗᲐᲕᲐᲠᲘ 
     url: /
-  - title: ᲞᲠᲝᲔᲥᲢᲔᲑᲘ
-    url: /projects/
-  - title: ᲡᲢᲐᲢᲘᲔᲑᲘ
-    url: /articles
+  - title: ᲞᲝᲔᲖᲘᲐ
+    url: /poetry/
   - title: ᲑᲚᲝᲒᲘ
     url: /blog/
-  - title: ᲐᲠᲥᲘᲕᲘ
-    url: /archive/
   
 
 # Markdown
